--- a/vite-project/HTMLscaffold.html
+++ b/vite-project/HTMLscaffold.html
@@ -1,62 +1,61 @@
-<div id="root">
-  <section id="personal-info" class="card border-4 p-4">
-    <h1 class="pb-2">Personal Information</h1>
-    <div class="flex flex-col">
-      <label for="full_name">Full Name</label
-      ><input id="full_name" type="text" value="" />
-    </div>
-    <div class="flex flex-col">
-      <label for="email">Email</label><input id="email" type="email" value="" />
-    </div>
-    <div class="flex flex-col">
-      <label for="address">Address</label
-      ><input id="address" type="text" value="" />
-    </div>
-    <div class="flex flex-col">
-      <label for="phone_number">Phone Number</label
-      ><input id="phone_number" type="tel" value="" />
-    </div>
-  </section>
-  <section id="education" class="card border-4 p-4">
-    <h1 class="pb-2">Education</h1>
-    <div class="flex flex-col">
-      <label for="school">School</label
-      ><input id="school" type="text" value="" />
-    </div>
-    <div class="flex flex-col">
-      <label for="program">Program</label
-      ><input id="program" type="text" value="" />
-    </div>
-    <div class="flex flex-col">
-      <label for="edu-start">Start</label
-      ><input id="edu-start" type="month" value="" />
-    </div>
-    <div class="flex flex-col">
-      <label for="edu-end">End</label
-      ><input id="edu-end" type="month" value="" />
-    </div>
-  </section>
-  <section id="experience" class="card border-4 p-4">
-    <h1 class="pb-2">Experience</h1>
-    <div class="flex flex-col">
-      <label for="organization">Organization</label
-      ><input id="organization" type="text" value="" />
-    </div>
-    <div class="flex flex-col">
-      <label for="position">Position</label
-      ><input id="position" type="text" value="" />
-    </div>
-    <div class="flex flex-col">
-      <label for="exp-start">Start</label
-      ><input id="exp-start" type="month" value="" />
-    </div>
-    <div class="flex flex-col">
-      <label for="exp-end">End</label
-      ><input id="exp-end" type="month" value="" />
-    </div>
-    <div class="flex flex-col">
-      <label for="description">Description</label
-      ><textarea id="description"></textarea>
-    </div>
-  </section>
-</div>
+<!-- Sidebar scaffold -->
+<section id="personal-info" class="card mb-6 w-2/6 border-4 p-4">
+  <h1 class="pb-2">Personal Information</h1>
+  <div class="flex flex-col">
+    <label for="full_name">Full Name</label
+    ><input id="full_name" type="text" value="" />
+  </div>
+  <div class="flex flex-col">
+    <label for="email">Email</label><input id="email" type="email" value="" />
+  </div>
+  <div class="flex flex-col">
+    <label for="address">Address</label
+    ><input id="address" type="text" value="" />
+  </div>
+  <div class="flex flex-col">
+    <label for="phone_number">Phone Number</label
+    ><input id="phone_number" type="tel" value="" />
+  </div>
+</section>
+<section id="education" class="card mb-6 w-2/6 border-4 p-4">
+  <h1 class="pb-2">Education</h1>
+  <div class="flex flex-col">
+    <label for="school">School</label><input id="school" type="text" value="" />
+  </div>
+  <div class="flex flex-col">
+    <label for="program">Program</label
+    ><input id="program" type="text" value="" />
+  </div>
+  <div class="flex flex-col">
+    <label for="edu-start">Start</label
+    ><input id="edu-start" type="month" value="" />
+  </div>
+  <div class="flex flex-col">
+    <label for="edu-end">End</label><input id="edu-end" type="month" value="" />
+  </div>
+</section>
+<section id="experience" class="card mb-6 w-2/6 border-4 p-4">
+  <h1 class="pb-2">Experience</h1>
+  <div class="flex flex-col">
+    <label for="organization">Organization</label
+    ><input id="organization" type="text" value="" />
+  </div>
+  <div class="flex flex-col">
+    <label for="position">Position</label
+    ><input id="position" type="text" value="" />
+  </div>
+  <div class="flex flex-col">
+    <label for="exp-start">Start</label
+    ><input id="exp-start" type="month" value="" />
+  </div>
+  <div class="flex flex-col">
+    <label for="exp-end">End</label><input id="exp-end" type="month" value="" />
+  </div>
+  <div class="flex flex-col">
+    <label for="description">Description</label
+    ><textarea id="description"></textarea>
+  </div>
+</section>
+
+<!-- Document scaffold (ratio 1:1.41) -->
+<section id="document" class="aspect-[0.7071067811] h-40 border-2"></section>
